Enhance APIs, pagination support, and test coverage
- Refactored BankController for cleaner request handling and responses
- Improved BankService and BankServiceImpl business logic
- Enhanced BankRepository interactions for better persistence handling
- Updated Feign CustomerClient integration with Customer microservice
- Introduced PageResponse wrapper for standardized paginated responses
- Improved BankResponseDTO for consistent API contracts
- Updated and strengthened unit tests for controller and service layers